--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1734,10 +1734,11 @@
 
 	h2 {
 		font-size: 2.25rem;
+		margin-bottom: 0rem;
 	}
 
 	h3 {
-		font-size: 1.5rem;
+		font-size: 1.25rem;
 	}
 
 	h4 {
